[gd_scene load_steps=5 format=3 uid="uid://be2cjg3p4h1ye"]

[ext_resource type="Script" path="res://CookingObjects/Pot Normal/pot_normal.gd" id="1_pdm6x"]
[ext_resource type="Texture2D" uid="uid://brwfm50gyafys" path="res://Assets/icon.svg" id="2_lnk4u"]
[ext_resource type="Texture2D" uid="uid://ix50l6q8vmw7" path="res://Assets/Gummy bear army.png" id="3_l4v0c"]
[ext_resource type="Texture2D" uid="uid://cktcmrp8uavic" path="res://Assets/npc candygirl sprite sheet fixed.png" id="4_fnmaq"]

[node name="Pot_Normal" type="Control" node_paths=PackedStringArray("pot", "sprout", "plant", "growingTimer", "rottingTimer")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pdm6x")
pot = NodePath("pot")
sprout = NodePath("Sporut")
plant = NodePath("Plant")
growingTimer = NodePath("Growing Timer")
rottingTimer = NodePath("Rotting Timer")

[node name="pot" type="Sprite2D" parent="."]
visible = false
position = Vector2(935, 603)
texture = ExtResource("2_lnk4u")

[node name="Sporut" type="Sprite2D" parent="."]
visible = false
position = Vector2(921, 569)
scale = Vector2(0.434, 0.3435)
texture = ExtResource("3_l4v0c")

[node name="Plant" type="Sprite2D" parent="."]
visible = false
position = Vector2(1158, 637)
scale = Vector2(0.59375, 0.3835)
texture = ExtResource("4_fnmaq")

[node name="Growing Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Rotting Timer" type="Timer" parent="."]
wait_time = 4.047
one_shot = true

[node name="CollectButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 302.0
offset_right = 1484.0
offset_bottom = 771.0

[connection signal="timeout" from="Growing Timer" to="." method="_on_growing_timer_timeout"]
[connection signal="timeout" from="Rotting Timer" to="." method="_on_rotting_timer_timeout"]
[connection signal="button_down" from="CollectButton" to="." method="_on_collect_button_button_down"]
[connection signal="button_up" from="CollectButton" to="." method="_on_collect_button_button_up"]
